fix: Refactor contact content styles for improved layout and readability

--- a/src/index.css
+++ b/src/index.css
@@ -877,26 +877,8 @@ body {
     margin: unset;
     padding-top: 70px;
   }
-
   .contact-content {
-  }
-
-  .contact-content h2 {
-    margin: unset;
-    font-size: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 500;
-    color: black;
-    padding-bottom: 20px;
-  }
-
-  .contact-content p {
-    margin: unset;
-    font-size: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 500;
-    line-height: 2;
-    color: black;
+    padding: 10px 0px 0px 20px;
   }
 
   .contact-content p a {
